Fix Table dataSource indexing by replacing `getFirst()` with `get(0)` for compatibility improvements